# json-rpc-2.0

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  MODULE.bazel  README.md  README_8md.html  WORKSPACE.bazel  annotated.html  annotated_dup.js  classes.html  classjson__rpc_1_1Client-members.html  classjson__rpc_1_1Client.html  classjson__rpc_1_1Client.js  classjson__rpc_1_1ClientTransport-members.html  classjson__rpc_1_1ClientTransport.html  classjson__rpc_1_1ClientTransport.js  classjson__rpc_1_1ClientTransport__coll__graph.dot  classjson__rpc_1_1ClientTransport__coll__graph.map  classjson__rpc_1_1ClientTransport__coll__graph.md5  classjson__rpc_1_1ClientTransport__inherit__graph.dot  classjson__rpc_1_1ClientTransport__inherit__graph.map  classjson__rpc_1_1ClientTransport__inherit__graph.md5  classjson__rpc_1_1Client__coll__graph.dot  classjson__rpc_1_1Client__coll__graph.map  classjson__rpc_1_1Client__coll__graph.md5  classjson__rpc_1_1Client_a13184e0d3d03b0c2c1d3578bb1467e4d_cgraph.dot  classjson__rpc_1_1Client_a13184e0d3d03b0c2c1d3578bb1467e4d_cgraph.map  classjson__rpc_1_1Client_a13184e0d3d03b0c2c1d3578bb1467e4d_cgraph.md5  classjson__rpc_1_1Client_aabf3cba313e0c2d180d9cd67b2133519_cgraph.dot  classjson__rpc_1_1Client_aabf3cba313e0c2d180d9cd67b2133519_cgraph.map  classjson__rpc_1_1Client_aabf3cba313e0c2d180d9cd67b2133519_cgraph.md5  classjson__rpc_1_1Dispatcher-members.html  classjson__rpc_1_1Dispatcher.html  (+1020 more)
.github/workflows/: ci.yml  doxygen.yml
docs/: Doxyfile
docs/assets/: header.html
doxygen_assets/: header.html
examples/: BUILD.bazel  CMakeLists.txt  calculator.h  calculator.hpp  framed_pipe_client.cpp  framed_pipe_server.cpp  framed_socket_client.cpp  framed_socket_server.cpp  http_client.cpp  http_server.cpp  pipe_client.cpp  pipe_server.cpp  socket_client.cpp  socket_server.cpp  stdio_client.cpp  stdio_client_server.cpp  stdio_server.cpp
examples/calculator_example/framed_pipe/: server.cpp
examples/calculator_example/framed_socket/: server.cpp
examples/calculator_example/pipe/: server.cpp
examples/calculator_example/socket/: server.cpp
examples/calculator_example/stdio/: server.cpp
examples/lsp_example/: utils.hpp
examples/lsp_example/client/: .gitignore  package.json
examples/lsp_example/client/src/: extension.ts
examples/lsp_example/pipe/: lsp_server.cpp
examples/lsp_example/socket/: lsp_server.cpp
include/: BUILD.bazel
include/json_rpc/: json_rpc.h  json_rpc.hpp
include/json_rpc/client/: client.h  client.hpp
include/json_rpc/core/: client_transport.hpp  dispatcher.h  dispatcher.hpp  error.h  request.h  request.hpp  response.h  response.hpp  server_transport.h  server_transport.hpp  transport.h  types.h  types.hpp
include/json_rpc/server/: server.h  server.hpp
include/json_rpc/transports/: framed_stdio_client_transport.h  framed_stdio_client_transport.hpp  framed_stdio_server_transport.hpp  framed_stdio_transport.h  framed_transport.h  framed_transport.hpp  http_client_transport.h  http_client_transport.hpp  http_server_transport.hpp  http_transport.h  stdio_client_transport.h  stdio_client_transport.hpp  stdio_server_transport.hpp  stdio_transport.h
include/jsonrpc/: jsonrpc.hpp
include/jsonrpc/client/: client.hpp  request.hpp
include/jsonrpc/client/transports/: client_transport.hpp  (+2 more)
include/jsonrpc/core/: client_transport.hpp  dispatcher.hpp  request.hpp  response.hpp  server_transport.hpp  types.hpp
include/jsonrpc/server/: dispatcher.hpp  request.hpp  response.hpp  server.hpp  types.hpp
include/jsonrpc/transport/: framed_pipe_transport.hpp  framed_socket_transport.hpp  framed_stdio_transport.hpp  framed_transport.hpp  pipe_transport.hpp  socket_transport.hpp  stdio_transport.hpp  transport.hpp
include/jsonrpc/transports/: framed_stdio_client_transport.hpp  framed_stdio_server_transport.hpp  framed_transport.hpp  http_client_transport.hpp  http_server_transport.hpp  stdio_client_transport.hpp  stdio_server_transport.hpp
include/jsonrpc/utils/: string_utils.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  (+38 more)
src/: BUILD.bazel
src/client/: client.cpp  request.cpp
src/client/transports/: framed_stdio_client_transport.cpp  stdio_client_transport.cpp
src/common/transports/: framed_transport.cpp
src/core/: dispatcher.cpp  error.cpp  request.cpp  response.cpp
src/server/: dispatcher.cpp  request.cpp  response.cpp  server.cpp
src/server/transports/: framed_stdio_server_transport.cpp  stdio_server_transport.cpp
src/transport/: framed_pipe_transport.cpp  framed_socket_transport.cpp  framed_stdio_transport.cpp  framed_transport.cpp  pipe_transport.cpp  socket_transport.cpp  stdio_transport.cpp
src/transports/: framed_stdio_client_transport.cpp  framed_stdio_server_transport.cpp  framed_stdio_transport.cpp  framed_transport.cpp  http_client_transport.cpp  http_server_transport.cpp  http_transport.cpp  stdio_client_transport.cpp  stdio_server_transport.cpp  stdio_transport.cpp
tests/: BUILD.bazel  CMakeLists.txt
tests/client/: test_client.cpp
tests/client/transports/: test_stdio_client_transport.cpp
tests/common/: mock_transport.hpp  test_utilities.hpp
tests/common/transports/: test_framed_transport.cpp
tests/core/: test_dispatcher.cpp  test_request.cpp  test_response.cpp
tests/server/: test_dispatcher.cpp  test_request.cpp  test_response.cpp  test_server.cpp
tests/server/transports/: test_stdio_server_transport.cpp
tests/transports/: test_framed_transport.cpp  test_pipe_transport.cpp  test_socket_transport.cpp  test_stdio_client_transport.cpp  test_stdio_server_transport.cpp  test_stdio_transport.cpp
(+4 files in other folders)
