# examples/BUILD.bazel

# Standard I/O examples
cc_binary(
    name = "stdio_client",
    srcs = ["calculator_example/stdio/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "stdio_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/stdio/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Unix domain socket examples
cc_binary(
    name = "pipe_client",
    srcs = ["calculator_example/pipe/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/pipe/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Framed Unix domain socket examples
cc_binary(
    name = "framed_pipe_client",
    srcs = ["calculator_example/framed_pipe/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "framed_pipe_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/framed_pipe/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Socket examples
cc_binary(
    name = "socket_client",
    srcs = ["calculator_example/socket/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "socket_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/socket/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# Framed socket examples
cc_binary(
    name = "framed_socket_client",
    srcs = ["calculator_example/framed_socket/client.cpp"],
    deps = ["//src:jsonrpc_lib"],
)

cc_binary(
    name = "framed_socket_server",
    srcs = [
        "calculator_example/calculator.hpp",
        "calculator_example/framed_socket/server.cpp",
    ],
    deps = ["//src:jsonrpc_lib"],
)

# LSP example
cc_binary(
    name = "pipe_lsp_server",
    srcs = ["lsp_example/pipe_lsp_server.cpp"],
    deps = ["//src:jsonrpc_lib"],
)
